--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="personal-info">
             <img id="my-img" src="images/Character-icon.png" alt="Personal Photo">
             <h3 id="my-name">Yahia Yacine</h3>
-            <h6>lvl:begenner</h6>
+            <h6>lvl:beginner</h6>
         </div>
 
         <div class="links">
@@ -74,5 +74,6 @@
     </div>
 
 </body>
+
 
 </html>
