--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#file:///C:/HTML/Personal-Portfolio-Page/index.html#Home">Home</a>
             <a href="#projects">Our Projects</a>
             <a href="#contact">Contact Me</a>
-            <button onclick="document.getElementById('about-me').textContent='I love to make websita pages im just in the beggining but when i develop in the future i will provide product that are worth buying.' ">About Me</button>
+            <button onclick="document.getElementById('about-me').textContent='I love to make website pages im just in the beggining but when i develop in the future i will provide product that are worth buying.' ">About Me</button>
         </div>
     </div>
     <div class="body" id="Home">
@@ -77,3 +77,4 @@
 
 
 </html>
+
